# bells

./: .dockerignore  .env.dev-deploy  .env.dev-local  .env.prod  .gitignore  Dockerfile  README.md  compose.dev-deploy.yaml  compose.dev-local.yaml  compose.dev.yaml  compose.prod.yaml  compose.yaml  entrypoint.sh  index.html  package-lock.json  package.json  pyproject.toml  vite.Dockerfile  vite.config.ts
app/: Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.vite  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
app/accounts/: tests.py
app/accounts/migrations/: 0001_initial.py
app/bells/: __init__.py  asgi.py  context_processors.py  settings.py  urls.py
app/chat/: __init__.py  tests.py
app/chat/static/chat/: chat.css
app/core/: views.py
app/core/assets/: main.ts
app/gremlin/: tests.py  views.py
app/src/: index.ts
app/templates/: base.html  home.html
bells/: __init__.py  celery.py  settings.py  urls.py  views.py  wsgi.py
chat/: consumers.py  routing.py  tests.py  views.py
chat/static/chat/: chat.css
chat/templates/chat/: index.html  room.html
core/static/core/: base.css
core/templates/core/: home.html
gremlin/: apps.py  views.py
nginx/: nginx.conf
src/: main.tsx
templates/: base.html  home.html
