[tool.poetry]
name = "bells"
version = "0.1.0"
description = "A Django project"
authors = ["Ryan Jackson <supra621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
channels = "^4.0.0"
daphne = "^4.0.0"
selenium = "^4.15"

# Local
[tool.poetry.dependencies.django_base]
path = "C:/Users/supra/PycharmProjects/django_base/"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
