[tool.poetry]
name = "bells"
version = "0.1.0"
description = "A Django project"
authors = ["Ryan Jackson <supra621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
celery = { extras = ["redis"], version = "^5.3.6" }
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
django-debug-toolbar = "^4.2"
psycopg = { extras = ["binary"], version = "^3.1" }
pyarango = "^2"

[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies.django_base]
path = "../../django_base"
develop = true

#[tool.poetry.group.wheel]
#optional = true

#[tool.poetry.group.wheel.dependencies.django_base]

[tool.poetry.group.test.dependencies]
selenium = "^4.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
